RESOLVED FIXED272033
Fix build after drop of String constructor with raw pointer and length
https://bugs.webkit.org/show_bug.cgi?id=272033
Summary Fix build after drop of String constructor with raw pointer and length
Olivier Blin
Reported 2024-04-02 09:04:20 PDT
String constructors taking in a raw pointer and a length have been dropped in 276859@main One codepath without HAVE(ICU_U_NUMBER_FORMATTER) has not been migrated in IntlPluralRules.cpp, and one ASSERT() has not been removed in SVGTextMetrics.cpp.
Attachments
Olivier Blin
Comment 1 2024-04-02 09:08:55 PDT
EWS
Comment 2 2024-04-02 10:44:09 PDT
merge-queue failed to commit PR to repository. To retry, remove any blocking labels and re-apply merge-queue label
EWS
Comment 3 2024-04-02 12:03:16 PDT
Committed 276954@main (34d037641b00): <https://commits.webkit.org/276954@main> Reviewed commits have been landed. Closing PR #26727 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-04-02 12:04:14 PDT
Alex
Comment 5 2024-04-03 07:48:32 PDT
*** Bug 271974 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.