Fix build after drop of String constructor with raw pointer and length https://bugs.webkit.org/show_bug.cgi?id=272033

Reviewed by Chris Dumez.

String constructors taking in a raw pointer and a length have been
dropped in 276859@main, some codepaths need updates.

* Source/JavaScriptCore/runtime/IntlPluralRules.cpp:
(JSC::IntlPluralRules::select const):
Use the std::span String constructor in the codepath without HAVE(ICU_U_NUMBER_FORMATTER).

* Source/WebCore/rendering/svg/SVGTextMetrics.cpp:
(WebCore::SVGTextMetrics::SVGTextMetrics):
Remove ASSERT() since TextRun length is always unsigned.

Canonical link: https://commits.webkit.org/276954@main