Source/WebCore/rendering/svg/SVGTextMetrics.cpp
@@ -54,7 +54,6 @@ SVGTextMetrics::SVGTextMetrics(RenderSVGInlineText& textRenderer, const TextRun&
     m_glyph.unicodeString = run.text().toString();
     m_glyph.isValid = true;
 
-    ASSERT(run.length() >= 0);
     m_length = static_cast<unsigned>(run.length());
 }
 
